# idevicerestore

./: Makefile.am  configure.ac
include/: Makefile.am
src/: Makefile.am  asr.c  common.c  dfu.c  download.c  fdr.c  fls.c  ftab.c  idevicerestore.c  idevicerestore.pc.in  img3.c  img4.c  ipsw.c  limera1n.c  locking.c  mbn.c  normal.c  recovery.c  restore.c  sha1.c  sha512.c  tss.c
