nobase_dist_include_HEADERS = \
    asr.h \
    img4.h \
    fls.h \
    restore.h \
    endianness.h \
    locking.h \
    fdr.h \
    idevicerestore.h \
    img3.h \
    limera1n.h \
    ftab.h \
    mbn.h \
    sha512.h \
    ipsw.h \
    download.h \
    common.h \
    normal.h \
    recovery.h \
    sha1.h \
    limera1n_payload.h \
    tss.h \
    fixedint.h \
    dfu.h
