EXTRA_DIST = \
        endianness.h

nobase_include_HEADERS = \
	idevicerestore/asr.h \
	idevicerestore/common.h \
	idevicerestore/dfu.h \
	idevicerestore/download.h \
	idevicerestore/fdr.h \
	idevicerestore/fixedint.h \
	idevicerestore/fls.h \
	idevicerestore/ftab.h \
	idevicerestore/idevicerestore.h \
	idevicerestore/img3.h \
	idevicerestore/img4.h \
	idevicerestore/ipsw.h \
	idevicerestore/limera1n_payload.h \
	idevicerestore/limera1n.h \
	idevicerestore/locking.h \
	idevicerestore/mbn.h \
	idevicerestore/normal.h \
	idevicerestore/recovery.h \
	idevicerestore/restore.h \
	idevicerestore/sha1.h \
	idevicerestore/sha512.h \
	idevicerestore/tss.h 