EXTRA_DIST = \
        endianness.h

nobase_include_HEADERS = \
	libimobiledevice-glue/socket.h \
	libimobiledevice-glue/thread.h \
	libimobiledevice-glue/utils.h \
	libimobiledevice-glue/collection.h \
	libimobiledevice-glue/termcolors.h \
	libimobiledevice-glue/cbuf.h \
	libimobiledevice-glue/opack.h \
	libimobiledevice-glue/tlv.h \
	libimobiledevice-glue/asr.h \
	libimobiledevice-glue/common.h \
	libimobiledevice-glue/dfu.h \
	libimobiledevice-glue/download.h \
	libimobiledevice-glue/fdr.h \
	libimobiledevice-glue/fixedint.h \
	libimobiledevice-glue/fls.h \
	libimobiledevice-glue/ftab.h \
	libimobiledevice-glue/idevicerestore.h \
	libimobiledevice-glue/img3.h \
	libimobiledevice-glue/img4.h \
	libimobiledevice-glue/ipsw.h \
	libimobiledevice-glue/limera1n_payload.h \
	libimobiledevice-glue/limera1n.h \
	libimobiledevice-glue/locking.h \
	libimobiledevice-glue/mbn.h \
	libimobiledevice-glue/normal.h \
	libimobiledevice-glue/recovery.h \
	libimobiledevice-glue/restore.h \
	libimobiledevice-glue/sha1.h \
	libimobiledevice-glue/sha512.h \
	libimobiledevice-glue/tss.h 
